--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# ===============================
+# = SQL Debug
+# ===============================
+
 spring.datasource.url=jdbc:h2:mem:policydb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=hadi
@@ -8,3 +12,8 @@ spring.jpa.hibernate.ddl-auto = create
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2_console
 spring.sql.init.mode = never
+
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.format_sql=true
